--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -6,6 +6,8 @@
     <input id="hero-name" [(ngModel)]="hero.name" placeholder="Hero name">
   </div>
 
+  <button type="button" (click)="save()">save</button>
+
   <button type="button" (click)="goBack()">go back</button>
 
 </div>
